I think I fixed most image serving problems

--- a/final/index.html
+++ b/final/index.html
@@ -66,7 +66,8 @@
             <h1>Hi I'm Andrew</h1>
             <a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
         </div>
-        <img class="slidestill" src="images/about_cover.jpg" alt="Me Skiing">
+        <picture class="parallax"></picture>
+        <img class="slidestill" src="images/home/about_cover.jpg" alt="Me Skiing">
     </header>
     <div class="content">
         <div class="grid">
@@ -107,26 +108,31 @@
                         </figcaption>
                     </div>
                     <div id="mobilebanking">
-                        <figure class="thumbnail">
-                            <img class="modernimg" src="images/test2.jpg" alt="Mobile Banking Thumbnail">
-                            <img class="legacyimg" src="images/test2.jpg" alt="Mobile Banking Thumbnail">
-                        </figure>
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                        </picture>
                         <figcaption class="carddetails">
                             <h2>Mobile Banking</h2>
                         </figcaption>
                     </div>
                     <div id="vehicleregistration">
-                        <figure class="thumbnail">
-                            <img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
-                        </figure>
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                        </picture>
                         <figcaption class="carddetails">
                             <h2>Vehicle Registration</h2>
                         </figcaption>
                     </div>
                     <div id="strongmuseum">
-                        <figure class="thumbnail">
-                            <img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
-                        </figure>
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                        </picture>
                         <figcaption class="carddetails">
                             <h2>Strong Meseum</h2>
                         </figcaption>
@@ -141,33 +147,41 @@
                 </div>
                 <section class="projgallery">
                     <div id="newsdeckcard">
-                        <figure class="thumbnail">
-                            <img src="" alt="News Deck Thumbnail">
-                        </figure>
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                        </picture>
                         <div class="carddetails">
                             <h2>News Deck</h2>
                         </div>
                     </div>
                     <div id="mobilebanking">
-                        <figure class="thumbnail">
-                            <img src="" alt="Mobile Banking Thumbnail">
-                        </figure>
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                        </picture>
                         <div class="carddetails">
                             <h2>Mobile Banking</h2>
                         </div>
                     </div>
                     <div id="Vehicle Registration">
-                        <figure class="thumbnail">
-                            <img src="" alt="Vehicle Registration Thumbnail">
-                        </figure>
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                        </picture>
                         <div class="carddetails">
                             <h2>Vehicle Registration</h2>
                         </div>
                     </div>
                     <div id="Vehicle Registration">
-                        <figure class="thumbnail">
-                            <img src="" alt="Vehicle Registration Thumbnail">
-                        </figure>
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                        </picture>
                         <div class="carddetails">
                             <h2>Vehicle Registration</h2>
                         </div>
