--- a/final/index.html
+++ b/final/index.html
@@ -109,9 +109,9 @@
                     </div>
                     <div id="mobilebanking">
                         <picture class="thumbnail">
-                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
-                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
-                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                            <source srcset="images/banking/banking_cover.webp" type="image/webp">
+                            <source srcset="images/banking/banking_cover.jpg" type="image/jpeg">
+                            <img src="images/banking/banking_cover.jpg" alt="Mobile Banking Thumbnail">
                         </picture>
                         <figcaption class="carddetails">
                             <h2>Mobile Banking</h2>
@@ -119,9 +119,9 @@
                     </div>
                     <div id="vehicleregistration">
                         <picture class="thumbnail">
-                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
-                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
-                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                            <source srcset="images/vehicle/vehicle_cover.webp" type="image/webp">
+                            <source srcset="images/vehicle/vehicle_cover.jpg" type="image/jpeg">
+                            <img src="images/vehicle/vehicle_cover.jpg" alt="Vehicle Registration Thumbnail">
                         </picture>
                         <figcaption class="carddetails">
                             <h2>Vehicle Registration</h2>
@@ -141,7 +141,8 @@
                 <div class="hideshow">
                     <h1>Bonus</h1>
                     <figure class="hideshowicon">
-                        <img src="icons/baseline-expand_more-24px.svg" alt="Hide/Show Icon">
+                        <i class="fa fa-caret-down" id="pArrowDown"></i>
+                        <i class="fa fa-caret-up" id="pArrowUp"></i>
                     </figure>
                     <hr>
                 </div>
