homepage pretty much done

--- a/final/index.html
+++ b/final/index.html
@@ -83,7 +83,7 @@
                 <p>(862) 268-3561</p>
                 <h3>Twitter</h3>
                 <p>@alefurge</p>
-                <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">Resume</button>
+                <button onclick="window.location.href='resume.html'" class="deckButt">Resume</button>
             </aside>
             <div id="projectgrid">
                 <figure class="slideshow">
@@ -127,18 +127,20 @@
                             <h2>Vehicle Registration</h2>
                         </figcaption>
                     </div>
-                    <div id="strongmuseum">
+                    <div id="potions">
                         <picture class="thumbnail">
-                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
-                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
-                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
+                            <source srcset="images/zelda/zelda_cover.webp" type="image/webp">
+                            <source srcset="images/zelda/zelda_cover.jpg" type="image/jpeg">
+                            <img src="images/zelda/zelda_cover.jpg" alt="Bad JS Zelda Thumbnail">
                         </picture>
                         <figcaption class="carddetails">
-                            <h2>Strong Meseum</h2>
+                            <h2>Bad JS Zelda</h2>
                         </figcaption>
                     </div>
                 </section>
-                <div class="hideshow">
+
+                <!--Planned Bonus Section Need more content for it-->
+                <!--<div class="hideshow">
                     <h1>Bonus</h1>
                     <figure class="hideshowicon">
                         <i class="fa fa-caret-down" id="pArrowDown"></i>
@@ -188,7 +190,7 @@
                         </div>
                     </div>
                 </section>
-            </div>
+            </div>-->
         </div>
 
     </div>
