--- a/final/resume.html
+++ b/final/resume.html
@@ -29,7 +29,7 @@ div.cls_016{font-family:Arial,serif;font-size:12.1px;color:rgb(153,153,153);font
 <body>
 <div style="position:absolute;left:50%;margin-left:-306px;top:0px;width:612px;height:792px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="44dfdf96-fc51-11e8-8f58-0cc47a792c0a_id_44dfdf96-fc51-11e8-8f58-0cc47a792c0a_files/background1.jpg" width=612 height=792></div>
+<img src="images/background1.jpg" width=612 height=792></div>
 <div style="position:absolute;left:306.00px;top:53.25px" class="cls_006"><span class="cls_006">Summery</span></div>
 <div style="position:absolute;left:36.00px;top:53.25px" class="cls_003"><span class="cls_003">ANDREW LEFURGE</span></div>
 <div style="position:absolute;left:306.00px;top:67.50px" class="cls_004"><span class="cls_004">A highly motivated young designer who is</span></div>
