--- a/final/index.html
+++ b/final/index.html
@@ -29,7 +29,7 @@
                     </button>
                     <!-- Links in the Dropdown-->
                     <div class="dropdown-content">
-                        <a href="news_deck.html">News Deck</a>
+                        <a href="newsdeck.html">News Deck</a>
                         <a href="mobile_banking.html">Mobile Banking</a>
                         <a href="vehicle.html">Vehicle Registration</a>
                         <a href="vehicle.html">Strong Museum</a>
