Completed and linked to zelda page

--- a/final/index.html
+++ b/final/index.html
@@ -30,9 +30,9 @@
                     <!-- Links in the Dropdown-->
                     <div class="dropdown-content">
                         <a href="newsdeck.html">News Deck</a>
-                        <a href="mobile_banking.html">Mobile Banking</a>
+                        <a href="mobilebanking.html">Mobile Banking</a>
                         <a href="vehicle.html">Vehicle Registration</a>
-                        <a href="vehicle.html">Strong Museum</a>
+                        <a href="zelda.html">JS Zelda</a>
                     </div>
                 </div>
             </div>
@@ -131,10 +131,10 @@
                         <picture class="thumbnail">
                             <source srcset="images/zelda/zelda_cover.webp" type="image/webp">
                             <source srcset="images/zelda/zelda_cover.jpg" type="image/jpeg">
-                            <img src="images/zelda/zelda_cover.jpg" alt="Bad JS Zelda Thumbnail">
+                            <img src="images/zelda/zelda_cover.jpg" alt="JS Zelda Thumbnail">
                         </picture>
                         <figcaption class="carddetails">
-                            <h2>Bad JS Zelda</h2>
+                            <h2>JS Zelda</h2>
                         </figcaption>
                     </div>
                 </section>
@@ -191,11 +191,12 @@
                     </div>
                 </section>
             </div>-->
+            </div>
+
         </div>
 
-    </div>
-
-    <script src="interaction.js"></script>
+        <script src="interaction.js"></script>
 
 </body>
+
 </html>
