--- a/final/zelda.html
+++ b/final/zelda.html
@@ -32,7 +32,7 @@
                         <a href="newsdeck.html">News Deck</a>
                         <a href="mobile_banking.html">Mobile Banking</a>
                         <a href="vehicle.html">Vehicle Registration</a>
-                        <a href="vehicle.html">Strong Museum</a>
+                        <a href="zelda.html">JS Zelda</a>
                     </div>
                 </div>
             </div>
@@ -45,8 +45,8 @@
                 <iframe src="p5setup/finalProj_andrewLefurge/grid_2/index.html"></iframe>
             </div>
             <section id="project_intro">
-                <h1>Andrew Lefurge</h1>
-                <h3>Product Designer</h3>
+                <h1>JS Zelda</h1>
+                <h3>p5.js Game</h3>
                 <p>A multidisciplinary designer with a background in product, motion, and 3D design building inclusive products and experiences that delight and engage people in new and interesting ways.</p>
             </section>
             <aside>
@@ -56,7 +56,6 @@
                 <p>(862) 268-3561</p>
                 <h3>Twitter</h3>
                 <p>@alefurge</p>
-                <button onclick="window.location.href='resume.html'" class="deckButt">Resume</button>
             </aside>
 
 
