fixed zelda page

--- a/final/zelda.html
+++ b/final/zelda.html
@@ -47,15 +47,15 @@
             <section id="project_intro">
                 <h1>JS Zelda</h1>
                 <h3>p5.js Game</h3>
-                <p>A multidisciplinary designer with a background in product, motion, and 3D design building inclusive products and experiences that delight and engage people in new and interesting ways.</p>
+                <p>As part of my Interactive Development and Algorithmic Problem Solving II class I attempted to recreate elements of the orginal NES Legend of Zelda using the p5.js Javascript Library</p>
             </section>
             <aside>
-                <h3>Email</h3>
-                <p>andlefurge@gmail.com</p>
-                <h3>Phone</h3>
-                <p>(862) 268-3561</p>
-                <h3>Twitter</h3>
-                <p>@alefurge</p>
+                <h3>Role</h3>
+                <p>Developer</p>
+                <h3>Timeframe</h3>
+                <p>Fall 2017</p>
+                <h3>Tools</h3>
+                <p>Brackets, p5.js</p>
             </aside>
 
 
