video is good to go on mobile

--- a/final/newsdeck.html
+++ b/final/newsdeck.html
@@ -32,7 +32,7 @@
                         <a href="newsdeck.html">News Deck</a>
                         <a href="mobile_banking.html">Mobile Banking</a>
                         <a href="vehicle.html">Vehicle Registration</a>
-                        <a href="vehicle.html">Strong Museum</a>
+                        <a href="zelda.html">JS Zelda</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,9 @@
             </article>
             <figure class="fullsize">
                 <video autoplay playsinline controls loop src="videos/news_deck/home_interaction.mp4"></video>
+                <video autoplay playsinline controls loop src="videos/news_deck/bookmarks_interaction.mp4"></video>
             </figure>
+
         </div>
     </div>
 
