news deck just about Done

--- a/final/newsdeck.html
+++ b/final/newsdeck.html
@@ -87,10 +87,6 @@
                 <p>Invision Studio</p>
                 <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
             </aside>
-            <article>
-                <h2>Making News Actionable</h2>
-                <p>News is typically presented today as a never ending feed. People endlessly scroll to the bottom to see if they missed something interesting even if it isn't relevant anymore. News Deck avoids this by presenting news as a finite deck of cards which are intuitive to sort and interact with.</p>
-            </article>
             <article class="gallery">
                 <div class="cell">
                     <img src="../project2/news_deck/images/Bookmark_Crop.jpg">
@@ -100,14 +96,35 @@
                 </div>
             </article>
             <article>
-                <h2>Getting Insights</h2>
-                <p>In addition to making news more actionable, news deck will actively make suggestions for how the user can reduce the amount of news in their feed. These "Insights" are based on user behavior and can either be acted on or dismissed.</p>
+                <h2>Making News Actionable</h2>
+                <p>News is typically presented today as a never ending feed. People endlessly scroll to the bottom to see if they missed something interesting even if it isn't relevant anymore. News Deck avoids this by presenting news as a finite deck of cards which are intuitive to sort and interact with.</p>
             </article>
             <figure class="fullsize">
                 <video autoplay playsinline controls loop src="videos/news_deck/home_interaction.mp4"></video>
                 <video autoplay playsinline controls loop src="videos/news_deck/bookmarks_interaction.mp4"></video>
             </figure>
-
+            <article>
+                <h2>Getting Insights</h2>
+                <p>In addition to making news more actionable, news deck will actively make suggestions for how the user can reduce the amount of news in their feed. These "Insights" are based on user behavior and can either be acted on or dismissed.</p>
+            </article>
+            <figure class="fullsize">
+                <video autoplay playsinline controls loop src="videos/news_deck/insights_interactions.mp4"></video>
+            </figure>
+            <article>
+                <h2>Tailoring the Experience</h2>
+                <p>The user can manage the topics and publications they are subscribed to, in order to tailor their feed to their interests.</p>
+            </article>
+            <figure class="fullsize">
+                <video autoplay playsinline controls loop src="videos/news_deck/profile_interaction.mp4"></video>
+            </figure>
+            <article>
+                <h2>The Dashboard</h2>
+                <p>While News Deck is designed for mobile first as it is the primary platform for news consumption, the experience on a desktop has been considered as well.</p>
+            </article>
+            <figure class="fullsize">
+                <video autoplay playsinline controls loop src="videos/news_deck/desktop_interactions.mp4"></video>
+                <video autoplay playsinline controls loop src="videos/news_deck/hamburger_interaction.mp4"></video>
+            </figure>
         </div>
     </div>
 
