added banking page and linked to it

--- a/final/index.html
+++ b/final/index.html
@@ -30,7 +30,7 @@
                     <!-- Links in the Dropdown-->
                     <div class="dropdown-content">
                         <a href="newsdeck.html">News Deck</a>
-                        <a href="mobilebanking.html">Mobile Banking</a>
+                        <a href="banking.html">Mobile Banking</a>
                         <a href="vehicle.html">Vehicle Registration</a>
                         <a href="zelda.html">JS Zelda</a>
                     </div>
