started banking page

--- a/final/zelda.html
+++ b/final/zelda.html
@@ -10,7 +10,7 @@
     <script src="modernizr-custom.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Andrew Lefurge - Home</title>
+    <title>Andrew Lefurge - Zelda</title>
 </head>
 
 <body>
