--- a/final/banking.html
+++ b/final/banking.html
@@ -10,7 +10,7 @@
     <script src="modernizr-custom.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Andrew Lefurge - Home</title>
+    <title>Andrew Lefurge - Banking</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                     <!-- Links in the Dropdown-->
                     <div class="dropdown-content">
                         <a href="newsdeck.html">News Deck</a>
-                        <a href="mobile_banking.html">Mobile Banking</a>
+                        <a href="banking.html">Mobile Banking</a>
                         <a href="vehicle.html">Vehicle Registration</a>
                         <a href="zelda.html">JS Zelda</a>
                     </div>
@@ -63,7 +63,7 @@
     </div>
     <header id="header_gallary">
         <div>
-            <h1>News Deck</h1>
+            <h1>Mobile Banking</h1>
             <a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
         </div>
         <img class="slide" src="images/daniil-silantev-1147022-unsplash_crop_high_res.jpg" alt="Warm Forest Photo">
@@ -74,17 +74,17 @@
         <div class="grid">
 
             <section id="project_intro">
-                <h1>News Deck</h1>
-                <h3>Product Concept</h3>
-                <p>People are constantly overwhelmed by the amount of information they are asked to consume on a regular basis. We are inundated with heaps of news, only a small percentage of which we actually care about. So I designed a mobile first news aggregation app that enables users to better manage and compartmentalize the news they consume.</p>
+                <h1>Affinity Mobile Banking</h1>
+                <h3>Visual Redesign</h3>
+                <p>Through research and conversations with people in the Financial Services Industry, I identified that the greatest challenge facing the industry was their struggle to gain and retain younger users.</p>
             </section>
             <aside>
                 <h3>Role</h3>
                 <p>Visual Design, Interaction Design</p>
                 <h3>Duration</h3>
-                <p>April - May 2018</p>
+                <p>2 Weeks, February 2018</p>
                 <h3>Tools</h3>
-                <p>Invision Studio</p>
+                <p>Adobe Illustrator, Adobe XD</p>
                 <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
             </aside>
             <article class="gallery">
@@ -96,36 +96,18 @@
                 </div>
             </article>
             <article>
-                <h2>Making News Actionable</h2>
-                <p>News is typically presented today as a never ending feed. People endlessly scroll to the bottom to see if they missed something interesting even if it isn't relevant anymore. News Deck avoids this by presenting news as a finite deck of cards which are intuitive to sort and interact with.</p>
+                <h2>Same App New Look</h2>
+                <p>I redesigned the <a href="https://www.affinityfcu.com/banking/mobile-banking/the-affinity-mobile-banking-app.aspx">Affinity Mobile Banking app</a> to meet the expectations of young users and to satisfy the interests of the business. Subtle gradients and illustrations were used to bring the design in line with modern trends, while generous spacing and a clear visual hierarchy ensure clarity and usability.</p>
             </article>
             <figure class="fullsize">
                 <video autoplay playsinline controls loop src="videos/news_deck/home_interaction.mp4"></video>
                 <video autoplay playsinline controls loop src="videos/news_deck/bookmarks_interaction.mp4"></video>
             </figure>
             <article>
-                <h2>Getting Insights</h2>
-                <p>In addition to making news more actionable, news deck will actively make suggestions for how the user can reduce the amount of news in their feed. These "Insights" are based on user behavior and can either be acted on or dismissed.</p>
+                <h2>Finding the Mood</h2>
+                <p>When finding the mood for the design, I wanted to avoid looking at existing UI for my first references to avoid the pitfalls of the products already on the market. Instead I found inspiration in modern Industrial Design and Photography. I was especially inspired by white Mediterranean homes resting against the natural gradients of a sunset. This became a key influence for my design direction.</p>
             </article>
-            <figure class="fullsize">
-                <video autoplay playsinline controls loop src="videos/news_deck/insights_interactions.mp4"></video>
-            </figure>
-            <article>
-                <h2>Tailoring the Experience</h2>
-                <p>The user can manage the topics and publications they are subscribed to, in order to tailor their feed to their interests.</p>
-            </article>
-            <figure class="fullsize">
-                <video autoplay playsinline controls loop src="videos/news_deck/profile_interaction.mp4"></video>
-            </figure>
-            <article>
-                <h2>The Dashboard</h2>
-                <p>While News Deck is designed for mobile first as it is the primary platform for news consumption, the experience on a desktop has been considered as well.</p>
-            </article>
-            <figure class="fullsize">
-                <video autoplay playsinline controls loop src="videos/news_deck/desktop_interactions.mp4"></video>
-                <video autoplay playsinline controls loop src="videos/news_deck/hamburger_interaction.mp4"></video>
-            </figure>
-        </div>
+
     </div>
 
     <script src="interaction.js"></script>
