--- a/final/banking.html
+++ b/final/banking.html
@@ -66,9 +66,8 @@
             <h1>Mobile Banking</h1>
             <a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
         </div>
-        <img class="slide" src="images/daniil-silantev-1147022-unsplash_crop_high_res.jpg" alt="Warm Forest Photo">
-        <img class="slide" src="images/john-westrock-1075374-unsplash_crop_high_res.jpg" alt="Foggy Forest Photo">
-        <img class="slide" src="images/marita-kavelashvili-1151412-unsplash_crop_high_res.jpg" alt="Foggy Forest Valley Photo">
+        <img class="slide" src="images/banking/mobile_banking_mockup_wide.jpg" alt="App mockup on pink background">
+        <img class="slide" src="images/banking/banking_photo_mockup.jpg" alt="App in someones hand">
     </header>
     <div class="content">
         <div class="grid">
@@ -88,12 +87,8 @@
                 <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
             </aside>
             <article class="gallery">
-                <div class="cell">
-                    <img src="../project2/news_deck/images/Bookmark_Crop.jpg">
-                </div>
-                <div class="cell">
-                    <img src="../project2/news_deck/images/insights_crop.jpg">
-                </div>
+                <picture>
+                </picture>
             </article>
             <article>
                 <h2>Same App New Look</h2>
