fixed thumbnails on home

--- a/final/banking.html
+++ b/final/banking.html
@@ -84,7 +84,7 @@
                 <p>2 Weeks, February 2018</p>
                 <h3>Tools</h3>
                 <p>Adobe Illustrator, Adobe XD</p>
-                <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
+                <button onclick="window.location.href='https://lefurge.design/mobile-banking'" class="deckButt">View Deck</button>
             </aside>
             <article class="gallery">
                 <picture>
