projects actualy link from home

--- a/final/index.html
+++ b/final/index.html
@@ -98,41 +98,44 @@
                 </div>
                 <section class="projgallery">
                     <div id="newsdeck">
-                        <picture class="thumbnail">
+                        <a href="newsdeck.html"><picture class="thumbnail">
                             <source srcset="images/newsdeck/news_card.webp" type="image/webp">
                             <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
                             <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
-                        </picture>
+                        </picture></a>
                         <figcaption class="carddetails">
                             <h2>News Deck</h2>
                         </figcaption>
+
                     </div>
                     <div id="mobilebanking">
-                        <picture class="thumbnail">
+                        <a href="banking.html"><picture class="thumbnail">
                             <source srcset="images/banking/banking_cover.webp" type="image/webp">
                             <source srcset="images/banking/banking_cover.jpg" type="image/jpeg">
                             <img src="images/banking/banking_cover.jpg" alt="Mobile Banking Thumbnail">
-                        </picture>
+                        </picture></a>
                         <figcaption class="carddetails">
                             <h2>Mobile Banking</h2>
                         </figcaption>
+
                     </div>
                     <div id="vehicleregistration">
-                        <picture class="thumbnail">
+                        <a href="vehicle.html"><picture class="thumbnail">
                             <source srcset="images/vehicle/vehicle_cover.webp" type="image/webp">
                             <source srcset="images/vehicle/vehicle_cover.jpg" type="image/jpeg">
                             <img src="images/vehicle/vehicle_cover.jpg" alt="Vehicle Registration Thumbnail">
-                        </picture>
+                        </picture></a>
                         <figcaption class="carddetails">
                             <h2>Vehicle Registration</h2>
                         </figcaption>
+
                     </div>
                     <div id="potions">
-                        <picture class="thumbnail">
+                        <a href="zelda.html"><picture class="thumbnail">
                             <source srcset="images/zelda/zelda_cover.webp" type="image/webp">
                             <source srcset="images/zelda/zelda_cover.jpg" type="image/jpeg">
                             <img src="images/zelda/zelda_cover.jpg" alt="JS Zelda Thumbnail">
-                        </picture>
+                        </picture></a>
                         <figcaption class="carddetails">
                             <h2>JS Zelda</h2>
                         </figcaption>
