--- a/final/about.html
+++ b/final/about.html
@@ -39,8 +39,13 @@
         </div>
     </nav>
     <div class="content">
-
         <div class="grid">
+            <article class="gallery deckphoto">
+                <picture>
+                    <img src="images/dai-ke-32162-unsplash.jpg">
+                </picture>
+
+            </article>
             <section id="project_intro">
                 <h1>Building a Better Portfolio</h1>
                 <h3>Project Documentaion</h3>
@@ -54,8 +59,40 @@
                 <h3>Tools</h3>
                 <p>Brackets, jQuery, Modernizr</p>
             </aside>
-
-
+            <article class="gallery deckphoto">
+                <picture>
+                    <img src="images/helloquence-51716-unsplash.jpg" alt="Person signing Document">
+                </picture>
+            </article>
+            <section>
+                <h2>Identifying Users</h2   >
+                <p>I anticipate several types of users coming to my site.
+                    First and foremost the site is a place for employers to
+                    come and see my work. Secondly I expect my peers and
+                    colleagues to view my site for inspiration or information.
+                    Lastly my site will be a place for Online collaborators
+                    to find content projects I have created for the design
+                    community.</p>
+            </section>
+            <aside>
+                <h3>Users</h3>
+                <p>Employers</p>
+                <p>Peers</p>
+                <p>Collaborators</p>
+            </aside>
+            <article>
+                <h2>Design</h2>
+                <p>For the design I wanted to create something that was simple, responsive, and focused on the content. To achieve this I chose to work mostly with black, white, and a blue accent color, making sure to leave lots of whitespace. I made use of large changing images for headers to draw interest in projects quickly</p>
+            </article>
+            <article>
+                <h2>Sources Technology</h2>
+                <p>One of the key technologies I used throughout the site was jQuery. I used jQuery to handle most of the interactive enhancements to the site such as having the nav bar change when you scroll or having a button appear at the bottom of the viewport that returns the user to the top of the page</p>
+                <p>Another Technology I used was webp images. This tech is a new image file format by google that is signifigantly smaller than jpgs but look better. Unfortunatily this technology is not fully supported across all common browsers so I needed to use source set and the JS library Modernize to serve jpgs as fallbacks.</p>
+                <h3>Additional Resources</h3>
+                <p>Stock Photos by Helloquence and Dai Ke on Unsplash </p>
+                <p>pdftohtml.net for their conversion tool </p>
+                <p>Modified code snippet for Nav and image Carousals by w3schools </p>
+            </article>
 
         </div>
 
