--- a/final/banking.html
+++ b/final/banking.html
@@ -97,10 +97,10 @@
             </article>
             <article class="gallery">
                 <div class="cell">
-                    <img src="images/banking/iphone_acount_screen.png">
+                    <img src="images/banking/iphone_acount_screen.png" alt="iPhone acount screen">
                 </div>
                 <div class="cell">
-                    <img src="images/banking/iphone_transfer_screen.png">
+                    <img src="images/banking/iphone_transfer_screen.png" alt="iphone transfer screen">
                 </div>
             </article>
             <article>
