--- a/final/newsdeck.html
+++ b/final/newsdeck.html
@@ -66,8 +66,8 @@
             <h1>News Deck</h1>
             <a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
         </div>
-        <img class="slide" src="images/newsdeck/news_cover.jpg" alt="Warm Forest Photo">
-        <img class="slide" src="images/newsdeck/mobile_banking_cover.jpg" alt="Foggy Forest Photo">
+        <img class="slide" src="images/newsdeck/news_cover.jpg" alt="News Deck Mockup Dark">
+        <img class="slide" src="images/newsdeck/mobile_banking_cover.jpg" alt="News Deck Mockup Bright">
     </header>
     <div class="content">
         <div class="grid">
