--- a/final/about.html
+++ b/final/about.html
@@ -84,6 +84,17 @@
                 <h2>Design</h2>
                 <p>For the design I wanted to create something that was simple, responsive, and focused on the content. To achieve this I chose to work mostly with black, white, and a blue accent color, making sure to leave lots of whitespace. I made use of large changing images for headers to draw interest in projects quickly</p>
             </article>
+            <article class="gallery">
+                <div class="cell">
+                    <img src="images/project_sketch.jpg" alt="annotated thumbnail">
+                </div>
+                <div class="cell">
+                    <img src="images/thumb_sketch_crop.jpg" alt="home screen thumbnails">
+                </div>
+                <div class="cell">
+                    <img src="images/thumb_sketch.jpg" alt="extra screen sketch">
+                </div>
+            </article>
             <article>
                 <h2>Sources Technology</h2>
                 <p>One of the key technologies I used throughout the site was jQuery. I used jQuery to handle most of the interactive enhancements to the site such as having the nav bar change when you scroll or having a button appear at the bottom of the viewport that returns the user to the top of the page</p>
@@ -92,6 +103,10 @@
                 <p>Stock Photos by Helloquence and Dai Ke on Unsplash </p>
                 <p>pdftohtml.net for their conversion tool </p>
                 <p>Modified code snippet for Nav and image Carousals by w3schools </p>
+            </article>
+            <article>
+                <h2>Changes From Original</h2>
+                <p>The difference between this project and project 2 are that I have rebuilt the site using grid and flexbox to make everything scale more smoothly too mobile. In addition I am now using JS and jQuery to add interactive elemts to the project that enhance the user experiance. I have also begun to consider how I serve optomized responsive images using webp and Modernizer. My new solution is more robust and usable and is handled better by different browsers and viewport sizes.</p>
             </article>
 
         </div>
